fixed name cell alignment by type

--- a/resources/styles/components/scores/index.less
+++ b/resources/styles/components/scores/index.less
@@ -162,17 +162,20 @@
       display: inline-block;
       width: 50%;
       text-align: center;
+      overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+      
       &:first-child {
         border-right: 1px solid @nav-tabs-border-color;
       }
     }
   }
-  .name-cell .name {
-    padding-left: 1rem;
-    text-align: left;
-    display: inline-block;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  .name-cell a {
+    line-height: inherit;
+  }
+  .name-cell .student-id {
+    font-size: 1.15rem;
   }
 
 }
